--- a/src/application/InterpreterInterface.form
+++ b/src/application/InterpreterInterface.form
@@ -261,7 +261,7 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="checkUseNegatives" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="2" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
                   <Component id="checkDoWrapping" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
